force-app/main/default/objects/RSurvey__c/RSurvey__c.object-meta.xml
<CustomObject>
    <label>RSurvey</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>RSurvey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSurveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>