force-app/main/default/objects/RSurvey__c/fields/Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Price__c</fullName>
    <label>Product Price</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>