force-app/main/default/objects/RSurvey__c/fields/RCustomerId__c.field-meta.xml
<CustomField>
    <fullName>RCustomerId__c</fullName>
    <label>RCustomer</label>
    <referenceTo>RCustomer__c</referenceTo>
    <relationshipLabel>RSurveys</relationshipLabel>
    <relationshipName>RSurveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>